[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=0.4.1",
    "mcp>=1.5.0",
    "odfpy>=1.4.1",
    "pandas>=2.2.3",
    "pymodbus>=3.8.6",
    "pymodbustcp>=0.3.0",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
]
