[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "openai-agents>=0.0.7",
    "pymodbus>=3.8.6",
    "pyserial>=3.5",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.0",
]
